[update] lesson